# BinaryMapping

./: .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  test.cc
docs/: basic_usage.md  buffer.md  custom_type.md
src/: bit_field.h  bitmap.h  container.h  iterator.h  raw.h  utility.h
src/custom/: bit_field.h  bit_field_reference.h  custom_serializable.h
src/detail/: base_pointer.h  base_ptr.h  comparable.h  relative_pointer.h  utility.h
src/detail/io/: buffer.h  buffer_iterator.h  iterator.h
src/detail/tuple/: mapper.h  serializer.h  setter.h  tuple.h  weigher.h
src/detail/tuple/modifier/: relative_tuple.h  value_tuple.h
src/detail/type/: comparable.h  query.h  sfinae.h  transformation.h
src/endianess/: big.h  in_place_sorter.h  little.h  out_of_place_sorter.h  serializer.h  undefined.h
src/helper/: base_pointer.h  in_place_sorter.h  out_of_place_sorter.h  relative_pointer.h
src/io/: buffer.h  buffer_guard.h  buffer_iterator.h
src/tuple/: base_ptr.h  binary_mapping.h  binary_mapping_carbon_copy.h  dereferencer.h  mapper.h  relative_pointer.h  setter.h  sliding_tuple.h  tuple.h  tuple_carbon_copy.h  weigher.h
src/tuple/modifier/: relative_tuple.h  value_tuple.h
src/type/: bit_field.h  bit_field_reference.h  custom_serializable.h  tuple.h
tests/: bit_field.cc  bitmap.cc  buffer.cc  container.cc  endianess.cc  special_use_case.cc  tuple.cc
